--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ksenia</title>
+  </head>
+<h1>Ksenia's work website is cooking. Hold tight</h1>
+  <body></body>
+</html>
