--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Ksenia</title>
   </head>
-<h1>Ksenia's work website is cooking. Hold tight</h1>
-  <body></body>
+
+  <body>
+    <h1>Ksenia's work website is cooking. Hold tight</h1>
+  </body>
 </html>
