--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
-    <h1>Ksenia's work website is cooking. Hold tight</h1>
+    <h1>Ksenia</h1>
+    <h2>
+      website is cooking <br />
+      hold tight
+    </h2>
   </body>
 </html>
