--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
 
     <section id="contact">
       <h2>Contact me</h2>
-      <form>
+      <form action="mailto:basswoman4@gmail.com" method="POST" enctype="multipart/form-data"
+      name="EmailForm">
         <input
           name="name"
           type="text"
