--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
+    <!-- <link rel="stylesheet" href="mediaqueries.css" /> -->
     <title>Ksenia</title>
   </head>
   <body>
@@ -13,31 +13,25 @@
         <h1>Hi, I'm Ksenia</h1>
         <h2>I live in Brooklyn and do different things:</h2>
       </div>
-      <div class="list-of-things">
-        <h2 onclick="location.href='#bass'" class="glowing-list-1">I Play Bass</h2>
-        <hr>
-        <h2 onclick="location.href='#sound'" class="glowing-list-2">I do Sound Desing, compose and make instruments</h2>
-        <hr>
-        <h2 onclick="location.href='#about'" class="glowing-list-3">About Me</h2>
-        <hr>
-        <h2 onclick="location.href='#contact'" class="glowing-list-4">Contact</h2>
-<!-- 
-        <button class="nav-btn" onclick="location.href='#bass'">Bass</button>
-        <button class="nav-btn" onclick="location.href='#sound'">
-          Sound-design / Engineering
-        </button>
-       
-        <button class="nav-btn" onclick="location.href='#web'">About me</button>
 
-        <button class="nav-btn" onclick="location.href='#contact'">
-          Contact me
-        </button> -->
-      </div>
+      <nav>
+        <ul>
+          <li><a href="#bass" class="glowing-list-1">I Play Bass</a></li>
+          <li>
+            <a href="#sound" class="glowing-list-2"
+              >I do Sound Design, compose and make instruments</a
+            >
+          </li>
+          <li><a href="#about" class="glowing-list-3">About Me</a></li>
+          <li><a href="#contact" class="glowing-list-4">Contact</a></li>
+        </ul>
+      </nav>
     </section>
 
     <section id="bass">
+      <h2>Bass</h2>
       <div class="bass-class">
-        <h2>Recent Performances:</h2>
+        <h3>Recent Performances:</h3>
         <div class="container-bass">
           <iframe
             width="356"
@@ -59,14 +53,15 @@
             allowfullscreen
           ></iframe>
         </div>
-        <h2>
-          <a class="glowing-list-1"
+        <h3>
+          <a
+            class="glowing-list-1"
             href="https://youtube.com/playlist?list=PLnggjYkbmAYRdzCvsXTFa_NMc-6WFFzjN&si=6ZrbuTIdah1bga1S"
             >More videos are here</a
           >
-        </h2>
+        </h3>
         <hr />
-        <h2>Spotify Playlist with my favorite tracks I recorded</h2>
+        <h3>Spotify Playlist with my favorite tracks I recorded</h3>
         <div style="margin-bottom: 0">
           <iframe
             style="border-radius: 12px"
@@ -84,193 +79,5 @@
         /></a>
       </div>
     </section>
-
-    <section id="sound">
-      <h2>Sound Design Work</h2>
-      <div class="container-kssl">
-        <div class="kssl-text">
-          <h3>
-            Microtonal Subtractive Synth KSSL #9 and it's software version with
-            3D user interface
-          </h3>
-          <p>
-            My little synth made it to the semi-final at at the Guthman Musical
-            Instrument Competition in 2021!
-          </p>
-          <p>
-            To read more about it you can on the
-            <a href="https://blog.bela.io/microtonal-synth-at-guthman/" class="glowing-list-2"
-              >BELA website</a
-            >
-          </p>
-          <p>
-            <em>
-              I'm very inspired by microtonal music and all the colors it can
-              bring to music. So I decided to create hardware and software
-              microtonal synthesizers. Then I thought that the software
-              interfaces usually don't reflect dynamics and beauty of the sound
-              and created the 3D visual prototype for the interface in Touch
-              Designer.</em
-            >
-          </p>
-        </div>
-        <iframe
-          width="356"
-          height="200"
-          src="https://www.youtube.com/embed/g0TnVF7yP6Q?si=8DM-0IqFEzrhtr99"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </div>
-      <div class="container-mid">
-        <div class="container-mid-left">
-          <div class="sound-replacement">
-            <h3>Sound Replacement Project</h3>
-            <!-- <p>
-            All the foley and creature sounds (except the thunder) are original
-            - sampled or synthesized
-          </p> -->
-            <iframe
-              width="356"
-              height="200"
-              src="https://www.youtube.com/embed/3ggFThMATzk?si=RX_49lnwSE-zMB6D"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-          <div class="audio3d">
-            <h3>3D Audio Project</h3>
-            <!-- <p>
-            Please use headphones to experience Spacial Audio. Guitar is
-            recorded by David Fiuczynski. Voice sample by Kenny Werner
-          </p> -->
-            <iframe
-              width="356"
-              height="200"
-              src="https://www.youtube.com/embed/QlKQpWC-YvA?si=zlp33jrdkTCvEUwx"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
-        <div class="container-mid-right">
-          <div class="small-window">
-            <h3 class="glowing-list-3">Generative Music in CSound</h3>
-            <hr />
-          </div>
-          <div class="small-window">
-            <h3 class="glowing-list-4" ><a href="/bike.html">Drum kit made of my sampled bicycle</a></h3>
-            <hr />
-          </div>
-          <div class="small-window">
-            <h3>
-              <a class="glowing-list-2"
-                href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
-                >Me playing different modular synths</a
-              >
-            </h3>
-            <hr />
-          </div>
-          <div class="small-window">
-            <!-- <h3>My Music on Bamdcamp</h3> -->
-            <iframe
-              style="border: 0; width: 100%; height: 42px"
-              src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=small/bgcol=ffffff/linkcol=333333/transparent=true/"
-              seamless
-              ><a href="https://kseniia.bandcamp.com/album/ambient"
-                >Ambient by Kseniia</a
-              ></iframe
-            >
-          </div>
-          <div class="small-window">
-            <!-- <h3>My Music on Bamdcamp</h3> -->
-            <iframe
-              style="border: 0; width: 100%; height: 42px"
-              src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
-              seamless
-              ><a href="https://kseniia.bandcamp.com/album/microtonal"
-                >Microtonal by Kseniia</a
-              ></iframe
-            >
-          </div>
-        </div>
-      </div>
-    </div >
-   
-    <a href="#contact" >
-      <img src="/assets/arrow-down.png" alt="" class="arrow" href="#contact" style="align-items: center"
-    /></a>
-  </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact me</h2>
-      <form name="submit-to-google-sheet">>
-        <input
-          name="name"
-          type="text"
-          class="feedback-input"
-          placeholder="Name"
-          required
-        />
-        <input
-          name="email"
-          type="text"
-          class="feedback-input"
-          placeholder="Email"
-          required
-        />
-        <textarea
-          name="text"
-          class="feedback-input"
-          placeholder="Comment"
-          required
-        ></textarea>
-        <button class="submit">submit</button>
-        
-      </form>
-
-     <h3 id="msg"></h3>
-
-      <footer class="footer">
-        <a href="https://www.facebook.com/ksenia.vasilyeva.3">
-          <img src="assets/fb.png" alt="" class="social-links"
-        /></a>
-        <a href="https://www.instagram.com/mrs.esper/">
-          <img src="assets/ig.png" alt="" class="social-links"
-        /></a>
-        <a href="https://www.linkedin.com/in/ksenia-vasileva/">
-          <img src="assets/li.png" alt="" class="social-links"
-        /></a>
-        <a href="https://www.youtube.com/@KsuBass/videos">
-          <img src="assets/yt.png" alt="" class="social-links"
-        /></a>
-      </footer>
-    </section>
-    <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbyouAVLZcTY41y29EeH_TUGo6HLJcYutmgowFMXNfIaUEFsYMW_KA3SrArGA5l3G2U4/exec'
-      const form = document.forms['submit-to-google-sheet']
-      const msg = document.getElementById('msg')
-      form.addEventListener('submit', e => {
-        e.preventDefault()
-        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-          .then(response => {
-            msg.innerHTML = 'Message Sent Successfully'
-            setTimeout(function(){
-              msg.innerHTML = ''
-            }, 5000)
-            form.reset()
-          })
-          .catch(error => console.error('Error!', error.message))
-      })
-    </script>
   </body>
 </html>
-
-
