--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   </head>
   <body>
     <section id="intro">
-      <div class="intro-text">
-        <h1>Hi, I'm Basswoman</h1>
-        <h2>I live in Brooklyn and do different things:</h2>
-      </div>
+      <h1>Hi, I'm Ksenia</h1>
+      <h2>I live in Brooklyn and do different things:</h2>
 
       <nav>
         <ul>
@@ -26,9 +24,13 @@
           <li><a href="#contact" class="glowing-list-4">Contact</a></li>
         </ul>
       </nav>
+
+      <!-- <div class="section-background">
+        <img src="/assets/bg.jpg" />
+      </div> -->
     </section>
 
-    <section id="bass">
+    <!-- <section id="bass">
       <h2>Bass</h2>
       <div class="bass-class">
         <h3>Recent Performances:</h3>
@@ -78,6 +80,6 @@
           <img src="/assets/arrow-down.png" alt="" class="arrow" href="#sound"
         /></a>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
