--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
           <li><a href="#contact" class="glowing-list-4">Contact</a></li>
         </ul>
       </nav>
-
-      <!-- <div class="section-background">
-        <img src="/assets/bg.jpg" />
-      </div> -->
     </section>
 
-    <!-- <section id="bass">
-      <h2>Bass</h2>
+    <section id="bass">
+      <!-- <h2>Bass</h2>
       <div class="bass-class">
         <h3>Recent Performances:</h3>
         <div class="container-bass">
@@ -79,7 +75,8 @@
         <a href="#sound">
           <img src="/assets/arrow-down.png" alt="" class="arrow" href="#sound"
         /></a>
-      </div>
-    </section> -->
+      </div> -->
+    </section>
+    <script src="/script.js"></script>
   </body>
 </html>
