--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
   </head>
   <body>
     <section id="intro">
-      <h1>Hi, I'm Ksenia</h1>
-      <h2>I live in Brooklyn and do different things:</h2>
+      <div class="content">
+        <h1>Hi, I'm Ksenia</h1>
+        <h2>I live in Brooklyn and do different things:</h2>
 
-      <nav>
-        <ul>
-          <li><a href="#bass" class="glowing-list-1">I Play Bass</a></li>
-          <li>
-            <a href="#sound" class="glowing-list-2"
-              >I do Sound Design, compose and make instruments</a
-            >
-          </li>
-          <li><a href="#about" class="glowing-list-3">About Me</a></li>
-          <li><a href="#contact" class="glowing-list-4">Contact</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="#bass" class="glowing-list-1">I Play Bass</a></li>
+            <li>
+              <a href="#sound" class="glowing-list-2"
+                >I do Sound Design, compose and make instruments</a
+              >
+            </li>
+            <li><a href="#about" class="glowing-list-3">About Me</a></li>
+            <li><a href="#contact" class="glowing-list-4">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </section>
 
     <section id="bass">
-      <!-- <h2>Bass</h2>
+      <div class="content">
+        <h2>Bass</h2>
+      </div>
+      <!--
       <div class="bass-class">
         <h3>Recent Performances:</h3>
         <div class="container-bass">
