--- a/index.html
+++ b/index.html
@@ -31,24 +31,19 @@
     <section id="bass">
       <div class="content">
         <h2>Bass</h2>
-      </div>
-      <!--
-      <div class="bass-class">
-        <h3>Recent Performances:</h3>
-        <div class="container-bass">
+
+        <div class="iframe-aspect-ratio">
           <iframe
-            width="356"
-            height="200"
             src="https://www.youtube.com/embed/ER7UyqsCuZs?si=igwknBAu9dpmXim9"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
           ></iframe>
+        </div>
 
+        <div class="iframe-aspect-ratio">
           <iframe
-            width="356"
-            height="200"
             src="https://www.youtube.com/embed/fm25aZRtSL4?si=6typotgjqZKX_PFl"
             title="YouTube video player"
             frameborder="0"
@@ -56,31 +51,31 @@
             allowfullscreen
           ></iframe>
         </div>
-        <h3>
+
+        <div>
           <a
-            class="glowing-list-1"
+            class="more-videos glowing-list-1"
             href="https://youtube.com/playlist?list=PLnggjYkbmAYRdzCvsXTFa_NMc-6WFFzjN&si=6ZrbuTIdah1bga1S"
             >More videos are here</a
           >
-        </h3>
-        <hr />
-        <h3>Spotify Playlist with my favorite tracks I recorded</h3>
-        <div style="margin-bottom: 0">
+        </div>
+
+        <div class="spotify">
+          <h3>Spotify Playlist with my favorite tracks I recorded</h3>
+
           <iframe
             style="border-radius: 12px"
             src="https://open.spotify.com/embed/playlist/4ZUiWnlPpBr1buIvkFiyx6?utm_source=generator"
-            width="300"
-            height="200"
             frameborder="0"
             allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
             loading="lazy"
           ></iframe>
         </div>
-        <a href="#sound">
+        <!-- <a href="#sound">
           <img src="/assets/arrow-down.png" alt="" class="arrow" href="#sound"
-        /></a>
-      </div> -->
+        /></a> -->
+      </div>
     </section>
     <script src="/script.js"></script>
   </body>
