--- a/index.html
+++ b/index.html
@@ -29,36 +29,41 @@
     </section>
 
     <section id="bass">
+      <h2>Bass</h2>
+
       <div class="content">
-        <h2>Bass</h2>
+        <div class="videos">
+          <div>
+            <div class="iframe-aspect-ratio">
+              <iframe
+                src="https://www.youtube.com/embed/ER7UyqsCuZs?si=igwknBAu9dpmXim9"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
 
-        <div class="iframe-aspect-ratio">
-          <iframe
-            src="https://www.youtube.com/embed/ER7UyqsCuZs?si=igwknBAu9dpmXim9"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+          <div>
+            <div class="iframe-aspect-ratio">
+              <iframe
+                src="https://www.youtube.com/embed/fm25aZRtSL4?si=6typotgjqZKX_PFl"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
         </div>
 
-        <div class="iframe-aspect-ratio">
-          <iframe
-            src="https://www.youtube.com/embed/fm25aZRtSL4?si=6typotgjqZKX_PFl"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-        </div>
-
-        <div>
-          <a
-            class="more-videos glowing-list-1"
-            href="https://youtube.com/playlist?list=PLnggjYkbmAYRdzCvsXTFa_NMc-6WFFzjN&si=6ZrbuTIdah1bga1S"
-            >More videos are here</a
-          >
-        </div>
+        <a
+          class="more-videos glowing-list-1"
+          href="https://youtube.com/playlist?list=PLnggjYkbmAYRdzCvsXTFa_NMc-6WFFzjN&si=6ZrbuTIdah1bga1S"
+          target="_blank"
+          >More videos are here</a
+        >
 
         <div class="spotify">
           <h3>Spotify Playlist with my favorite tracks I recorded</h3>
