add sound section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,129 @@
         /></a> -->
       </div>
     </section>
+    <section id="sound">
+      <h2>Sound Design Work</h2>
+      <div class="container-kssl">
+        <div class="kssl-text">
+          <h3>
+            Microtonal Subtractive Synth KSSL #9 and it's software version with
+            3D user interface
+          </h3>
+          <p>
+            My little synth made it to the semi-final at at the Guthman Musical
+            Instrument Competition in 2021!
+          </p>
+          <p>
+            To read more about it you can on the
+            <a href="https://blog.bela.io/microtonal-synth-at-guthman/" class="glowing-list-2"
+              >BELA website</a
+            >
+          </p>
+          <p>
+            <em>
+              I'm very inspired by microtonal music and all the colors it can
+              bring to music. So I decided to create hardware and software
+              microtonal synthesizers. Then I thought that the software
+              interfaces usually don't reflect dynamics and beauty of the sound
+              and created the 3D visual prototype for the interface in Touch
+              Designer.</em
+            >
+          </p>
+        </div>
+        <iframe
+          width="356"
+          height="200"
+          src="https://www.youtube.com/embed/g0TnVF7yP6Q?si=8DM-0IqFEzrhtr99"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="container-mid">
+        <div class="container-mid-left">
+          <div class="sound-replacement">
+            <h3>Sound Replacement Project</h3>
+            <!-- <p>
+            All the foley and creature sounds (except the thunder) are original
+            - sampled or synthesized
+          </p> -->
+            <iframe
+              width="356"
+              height="200"
+              src="https://www.youtube.com/embed/3ggFThMATzk?si=RX_49lnwSE-zMB6D"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="audio3d">
+            <h3>3D Audio Project</h3>
+            <!-- <p>
+            Please use headphones to experience Spacial Audio. Guitar is
+            recorded by David Fiuczynski. Voice sample by Kenny Werner
+          </p> -->
+            <iframe
+              width="356"
+              height="200"
+              src="https://www.youtube.com/embed/QlKQpWC-YvA?si=zlp33jrdkTCvEUwx"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="container-mid-right">
+          <div class="small-window">
+            <h3 class="glowing-list-3">Generative Music in CSound</h3>
+            <hr />
+          </div>
+          <div class="small-window">
+            <h3 class="glowing-list-4" ><a href="/bike.html">Drum kit made of my sampled bicycle</a></h3>
+            <hr />
+          </div>
+          <div class="small-window">
+            <h3>
+              <a class="glowing-list-2"
+                href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
+                >Me playing different modular synths</a
+              >
+            </h3>
+            <hr />
+          </div>
+          <div class="small-window">
+            <!-- <h3>My Music on Bamdcamp</h3> -->
+            <iframe
+              style="border: 0; width: 100%; height: 42px"
+              src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=small/bgcol=ffffff/linkcol=333333/transparent=true/"
+              seamless
+              ><a href="https://kseniia.bandcamp.com/album/ambient"
+                >Ambient by Kseniia</a
+              ></iframe
+            >
+          </div>
+          <div class="small-window">
+            <!-- <h3>My Music on Bamdcamp</h3> -->
+            <iframe
+              style="border: 0; width: 100%; height: 42px"
+              src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+              seamless
+              ><a href="https://kseniia.bandcamp.com/album/microtonal"
+                >Microtonal by Kseniia</a
+              ></iframe
+            >
+          </div>
+        </div>
+      </div>
+    </div >
+   
+    <a href="#contact" >
+      <img src="/assets/arrow-down.png" alt="" class="arrow" href="#contact" style="align-items: center"
+    /></a>
+  </div>
+    </section>
     <script src="/script.js"></script>
   </body>
 </html>
