--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h2>Sound Design Work</h2>
 
       <div class="project-videos">
-        <div class="project-video container-kssl">
+        <div class="project-video container-kssl sound-box">
           <div class="kssl-text">
             <h3>
               Microtonal Subtractive Synth KSSL #9 and it's software version
@@ -126,7 +126,7 @@
             </p>
           </div>
         </div>
-        <div class="project-video sound-replacement">
+        <div class="project-video sound-replacement sound-box">
           <h3>Sound Replacement Project</h3>
           <div>
             <div class="iframe-aspect-ratio">
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-        <div class="project-video audio3d">
+        <div class="project-video audio3d sound-box">
           <h3>3D Audio Project</h3>
 
           <div>
@@ -155,31 +155,29 @@
             </div>
           </div>
         </div>
+        <div class="sound-box project-links">
+          <ul>
+            <li>
+              <a href="#" class="glowing-list-3">Generative Music in CSound</a>
+            </li>
+            <li>
+              <a href="/bike.html" class="glowing-list-4"
+                >Drum kit made of my sampled bicycle</a
+              >
+            </li>
+            <li>
+              <a
+                class="glowing-list-2"
+                href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
+                >Me playing different modular synths</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
 
-      <div class="container-mid-right">
+     
         <div class="small-window">
-          <h3 class="glowing-list-3">Generative Music in CSound</h3>
-          <hr />
-        </div>
-        <div class="small-window">
-          <h3 class="glowing-list-4">
-            <a href="/bike.html">Drum kit made of my sampled bicycle</a>
-          </h3>
-          <hr />
-        </div>
-        <div class="small-window">
-          <h3>
-            <a
-              class="glowing-list-2"
-              href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
-              >Me playing different modular synths</a
-            >
-          </h3>
-          <hr />
-        </div>
-        <div class="small-window">
-          <!-- <h3>My Music on Bamdcamp</h3> -->
           <iframe
             style="border: 0; width: 100%; height: 42px"
             src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=small/bgcol=ffffff/linkcol=333333/transparent=true/"
@@ -190,7 +188,6 @@
           >
         </div>
         <div class="small-window">
-          <!-- <h3>My Music on Bamdcamp</h3> -->
           <iframe
             style="border: 0; width: 100%; height: 42px"
             src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
