Fixed z-index of section image by adding content class div and aligned sound boxes with simpler flex value.

--- a/index.html
+++ b/index.html
@@ -82,18 +82,57 @@
     <section id="sound">
       <h2>Sound Design Work</h2>
 
-      <div class="project-videos">
-        <div class="project-video container-kssl sound-box">
-          <div class="kssl-text">
-            <h3>
-              Microtonal Subtractive Synth KSSL #9 and it's software version
-              with 3D user interface
-            </h3>
+      <div class="content">
+        <div class="project-videos">
+          <div class="project-video container-kssl sound-box">
+            <div class="kssl-text">
+              <h3>
+                Microtonal Subtractive Synth KSSL #9 and it's software version
+                with 3D user interface
+              </h3>
 
+              <div>
+                <div class="iframe-aspect-ratio">
+                  <iframe
+                    src="https://www.youtube.com/embed/g0TnVF7yP6Q?si=8DM-0IqFEzrhtr99"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </div>
+
+              <p>
+                My little synth made it to the semi-final at at the Guthman
+                Musical Instrument Competition in 2021!
+              </p>
+              <p>
+                To read more about it you can on the
+                <a
+                  href="https://blog.bela.io/microtonal-synth-at-guthman/"
+                  class="glowing-list-2"
+                  >BELA website</a
+                >
+              </p>
+              <p>
+                <em>
+                  I'm very inspired by microtonal music and all the colors it
+                  can bring to music. So I decided to create hardware and
+                  software microtonal synthesizers. Then I thought that the
+                  software interfaces usually don't reflect dynamics and beauty
+                  of the sound and created the 3D visual prototype for the
+                  interface in Touch Designer.</em
+                >
+              </p>
+            </div>
+          </div>
+          <div class="project-video sound-replacement sound-box">
+            <h3>Sound Replacement Project</h3>
             <div>
               <div class="iframe-aspect-ratio">
                 <iframe
-                  src="https://www.youtube.com/embed/g0TnVF7yP6Q?si=8DM-0IqFEzrhtr99"
+                  src="https://www.youtube.com/embed/3ggFThMATzk?si=RX_49lnwSE-zMB6D"
                   title="YouTube video player"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -101,171 +140,129 @@
                 ></iframe>
               </div>
             </div>
-
-            <p>
-              My little synth made it to the semi-final at at the Guthman
-              Musical Instrument Competition in 2021!
-            </p>
-            <p>
-              To read more about it you can on the
-              <a
-                href="https://blog.bela.io/microtonal-synth-at-guthman/"
-                class="glowing-list-2"
-                >BELA website</a
-              >
-            </p>
-            <p>
-              <em>
-                I'm very inspired by microtonal music and all the colors it can
-                bring to music. So I decided to create hardware and software
-                microtonal synthesizers. Then I thought that the software
-                interfaces usually don't reflect dynamics and beauty of the
-                sound and created the 3D visual prototype for the interface in
-                Touch Designer.</em
-              >
-            </p>
           </div>
-        </div>
-        <div class="project-video sound-replacement sound-box">
-          <h3>Sound Replacement Project</h3>
-          <div>
-            <div class="iframe-aspect-ratio">
-              <iframe
-                src="https://www.youtube.com/embed/3ggFThMATzk?si=RX_49lnwSE-zMB6D"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
+          <div class="project-video audio3d sound-box">
+            <h3>3D Audio Project</h3>
+
+            <div>
+              <div class="iframe-aspect-ratio">
+                <iframe
+                  src="https://www.youtube.com/embed/QlKQpWC-YvA?si=zlp33jrdkTCvEUwx"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen
+                ></iframe>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="project-video audio3d sound-box">
-          <h3>3D Audio Project</h3>
-
-          <div>
-            <div class="iframe-aspect-ratio">
-              <iframe
-                src="https://www.youtube.com/embed/QlKQpWC-YvA?si=zlp33jrdkTCvEUwx"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-            </div>
+          <div class="sound-box project-links">
+            <ul>
+              <li>
+                <a href="#" class="glowing-list-3"
+                  >Generative Music in CSound</a
+                >
+              </li>
+              <li>
+                <a href="/bike.html" class="glowing-list-4"
+                  >Drum kit made of my sampled bicycle</a
+                >
+              </li>
+              <li>
+                <a
+                  class="glowing-list-2"
+                  href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
+                  >Me playing different modular synths</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="sound-box project-links">
-          <ul>
-            <li>
-              <a href="#" class="glowing-list-3">Generative Music in CSound</a>
-            </li>
-            <li>
-              <a href="/bike.html" class="glowing-list-4"
-                >Drum kit made of my sampled bicycle</a
-              >
-            </li>
-            <li>
-              <a
-                class="glowing-list-2"
-                href="https://www.youtube.com/playlist?list=PLnggjYkbmAYQJW-3J2xver7lKZX9fLEfj"
-                >Me playing different modular synths</a
-              >
-            </li>
-          </ul>
+
+        <div class="small-window">
+          <iframe
+            style="border: 0; width: 100%; height: 42px"
+            src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=small/bgcol=ffffff/linkcol=333333/transparent=true/"
+            seamless
+            ><a href="https://kseniia.bandcamp.com/album/ambient"
+              >Ambient by Kseniia</a
+            ></iframe
+          >
+        </div>
+        <div class="small-window">
+          <iframe
+            style="border: 0; width: 100%; height: 42px"
+            src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+            seamless
+            ><a href="https://kseniia.bandcamp.com/album/microtonal"
+              >Microtonal by Kseniia</a
+            ></iframe
+          >
         </div>
       </div>
-
-      <div class="small-window">
-        <iframe
-          style="border: 0; width: 100%; height: 42px"
-          src="https://bandcamp.com/EmbeddedPlayer/album=1348326211/size=small/bgcol=ffffff/linkcol=333333/transparent=true/"
-          seamless
-          ><a href="https://kseniia.bandcamp.com/album/ambient"
-            >Ambient by Kseniia</a
-          ></iframe
-        >
-      </div>
-      <div class="small-window">
-        <iframe
-          style="border: 0; width: 100%; height: 42px"
-          src="https://bandcamp.com/EmbeddedPlayer/album=4063065433/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
-          seamless
-          ><a href="https://kseniia.bandcamp.com/album/microtonal"
-            >Microtonal by Kseniia</a
-          ></iframe
-        >
-      </div>
-
-      <!-- <a href="#contact">
-        <img
-          src="/assets/arrow-down.png"
-          alt=""
-          class="arrow"
-          href="#contact"
-          style="align-items: center"
-      /></a> -->
     </section>
 
     <section id="contact">
       <h2>Contact me</h2>
-      <form name="submit-to-google-sheet">
-        <input
-          name="name"
-          type="text"
-          class="feedback-input"
-          placeholder="Name"
-          required
-        />
-        <input
-          name="email"
-          type="text"
-          class="feedback-input"
-          placeholder="Email"
-          required
-        />
-        <textarea
-          name="text"
-          class="feedback-input"
-          placeholder="Comment"
-          required
-        ></textarea>
-        <button class="submit">submit</button>
-      </form>
+      <div class="content">
+        <form name="submit-to-google-sheet">
+          <input
+            name="name"
+            type="text"
+            class="feedback-input"
+            placeholder="Name"
+            required
+          />
+          <input
+            name="email"
+            type="text"
+            class="feedback-input"
+            placeholder="Email"
+            required
+          />
+          <textarea
+            name="text"
+            class="feedback-input"
+            placeholder="Comment"
+            required
+          ></textarea>
+          <button class="submit">submit</button>
+        </form>
 
-      <h3 id="msg"></h3>
+        <h3 id="msg"></h3>
 
-      <div class="social-links">
-        <a href="https://www.facebook.com/ksenia.vasilyeva.3">
-          <img src="assets/fb.png" alt="facebook" 
-        /></a>
-        <a href="https://www.instagram.com/mrs.esper/">
-          <img src="assets/ig.png" alt="instagram" 
-        /></a>
-        <a href="https://www.linkedin.com/in/ksenia-vasileva/">
-          <img src="assets/li.png" alt="linkedin" 
-        /></a>
-        <a href="https://www.youtube.com/@KsuBass/videos">
-          <img src="assets/yt.png" alt="youtube" 
-        /></a>
-      </footer>
+        <div class="social-links">
+          <a href="https://www.facebook.com/ksenia.vasilyeva.3">
+            <img src="assets/fb.png" alt="facebook"
+          /></a>
+          <a href="https://www.instagram.com/mrs.esper/">
+            <img src="assets/ig.png" alt="instagram"
+          /></a>
+          <a href="https://www.linkedin.com/in/ksenia-vasileva/">
+            <img src="assets/li.png" alt="linkedin"
+          /></a>
+          <a href="https://www.youtube.com/@KsuBass/videos">
+            <img src="assets/yt.png" alt="youtube"
+          /></a>
+        </div>
+      </div>
     </section>
     <script>
       const scriptURL =
         'https://script.google.com/macros/s/AKfycbyouAVLZcTY41y29EeH_TUGo6HLJcYutmgowFMXNfIaUEFsYMW_KA3SrArGA5l3G2U4/exec';
       const form = document.forms['submit-to-google-sheet'];
       const msg = document.getElementById('msg');
-      form.addEventListener('submit', e => {
+      form.addEventListener('submit', (e) => {
         e.preventDefault();
         fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-          .then(response => {
+          .then((response) => {
             msg.innerHTML = 'Message Sent Successfully';
             setTimeout(function () {
               msg.innerHTML = '';
             }, 5000);
             form.reset();
           })
-          .catch(error => console.error('Error!', error.message));
+          .catch((error) => console.error('Error!', error.message));
       });
     </script>
   </body>
